<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/banco_claucas90"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButtonVerSaldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ver_saldo" />

            <RadioButton
                android:id="@+id/radioButtonIngresarDinero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingresar_dinero" />

            <RadioButton
                android:id="@+id/radioButtonSacarDinero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sacar_dinero" />

            <RadioButton
                android:id="@+id/radioButtonSalir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salir" />

        </RadioGroup>

        <EditText
            android:id="@+id/editTextAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingrese_el_monto"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/realizar_acci_n" />

    </LinearLayout>
</layout>